--- a/app/views/admin/practiceareas/_form.html.erb
+++ b/app/views/admin/practiceareas/_form.html.erb
@@ -29,7 +29,7 @@
   </div>
   <div class="field">
     <%= f.label :pa1_copy %><br>
-    <%= f.text_area :pa1_copy %>
+    <%= f.text_area :pa1_copy, :class => "tinymce", :id => "editor", :rows => 30, :cols => 80 %>
   </div>
   <div class="field">
     <%= f.label :pa2_title %><br>
@@ -37,7 +37,7 @@
   </div>
   <div class="field">
     <%= f.label :pa2_copy %><br>
-    <%= f.text_area :pa2_copy %>
+    <%= f.text_area :pa2_copy, :class => "tinymce", :id => "editor2", :rows => 30, :cols => 80 %>
   </div>
   <div class="field">
     <%= f.label :pa3_title %><br>
@@ -45,9 +45,11 @@
   </div>
   <div class="field">
     <%= f.label :pa3_copy %><br>
-    <%= f.text_area :pa3_copy %>
+    <%= f.text_area :pa3_copy, :class => "tinymce", :id => "editor3", :rows => 30, :cols => 80 %>
   </div>
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+
+<%= tinymce %>
