JJ: fix z-index problem with practice areas bar

--- a/app/assets/stylesheets/components/components.scss
+++ b/app/assets/stylesheets/components/components.scss
@@ -2,6 +2,7 @@
 ////////////////////////////////////////////////////////////////////////////////
 
 @import 'box-model';
+@import 'positions';
 @import 'displays';
 @import 'floats';
 @import 'colors';
