--- a/app/views/practiceareas/show.haml
+++ b/app/views/practiceareas/show.haml
@@ -8,7 +8,7 @@
           = @practicearea.hero_title
         %p.p-top-15.c-white.p-bottom-80
           = @practicearea.hero_copy
-.strata-small.bgc-lghter-gray.b-bottom-light-gray.w-100.z-999{"data-magellan-expedition" => "fixed"}
+.strata-small.bgc-lghter-gray.b-bottom-light-gray.w-100.p-relative{"data-magellan-expedition" => "fixed"}
   .row
     .small-12.medium-9.columns
       %h6.target-jump.d-inline-block.p-left-5.m-bottom-0.lh-btn-m{"data-target" => "pm"}
