--- a/app/views/admin/jobs/_form.html.erb
+++ b/app/views/admin/jobs/_form.html.erb
@@ -19,15 +19,67 @@
   </div>
   <div class="field">
     <%= f.label :location %><br>
-    <%= f.text_area :location %>
+    <%= f.text_field :location %>
   </div>
   <div class="field">
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </div>
   <div class="field">
-    <%= f.label :responsibilities %><br>
-    <%= f.text_area :responsibilities, :class => "tinymce", :id => "editor", :rows => 30, :cols => 80 %>
+    <%= f.label :area1_title %><br>
+    <%= f.text_field :area1_title %>
+  </div>
+  <div class="field">
+    <%= f.label :area1_copy %><br>
+    <%= f.text_area :area1_copy, :class => "tinymce", :id => "area1", :rows => 30, :cols => 80 %>
+  </div>
+  <div class="field">
+    <%= f.label :area2_title %><br>
+    <%= f.text_field :area2_title %>
+  </div>
+  <div class="field">
+    <%= f.label :area2_copy %><br>
+    <%= f.text_area :area2_copy, :class => "tinymce", :id => "area2", :rows => 30, :cols => 80 %>
+  </div>
+  <div class="field">
+    <%= f.label :area3_title %><br>
+    <%= f.text_field :area3_title %>
+  </div>
+  <div class="field">
+    <%= f.label :area3_copy %><br>
+    <%= f.text_area :area3_copy, :class => "tinymce", :id => "area3", :rows => 30, :cols => 80 %>
+  </div>
+  <div class="field">
+    <%= f.label :area4_title %><br>
+    <%= f.text_field :area4_title %>
+  </div>
+  <div class="field">
+    <%= f.label :area4_copy %><br>
+    <%= f.text_area :area4_copy, :class => "tinymce", :id => "area4", :rows => 30, :cols => 80 %>
+  </div>
+  <div class="field">
+    <%= f.label :area5_title %><br>
+    <%= f.text_field :area5_title %>
+  </div>
+  <div class="field">
+    <%= f.label :area5_copy %><br>
+    <%= f.text_area :area5_copy, :class => "tinymce", :id => "area5", :rows => 30, :cols => 80 %>
+  </div>
+  <div class="field">
+    <%= f.label :area6_title %><br>
+    <%= f.text_field :area6_title %>
+  </div>
+  <div class="field">
+    <%= f.label :area6_copy %><br>
+    <%= f.text_area :area6_copy, :class => "tinymce", :id => "area6", :rows => 30, :cols => 80 %>
+  </div>
+  <div class="field">
+    <%= f.label :area7_title %><br>
+    <%= f.text_field :area7_title %>
+  </div>
+  <div class="field">
+    <%= f.label :area7_copy %><br>
+    <%= f.text_area :area7_copy, :class => "tinymce", :id => "area7", :rows => 30, :cols => 80 %>
   </div>
   <div class="actions">
     <%= f.submit %>
