--- a/app/views/admin/insights/_form.html.erb
+++ b/app/views/admin/insights/_form.html.erb
@@ -27,6 +27,18 @@
     <%= f.label :article %><br>
     <%= f.file_field :article %>
   </div>
+  <div class="field">
+    <%= f.label "Business Consulting" %>
+    <%= f.check_box :businessconsulting %>
+  </div>
+  <div class="field">
+    <%= f.label "Project Managment" %>
+    <%= f.check_box :projectmanagement %>
+  </div>
+  <div class="field">
+    <%= f.label "Business Intelligence" %>
+    <%= f.check_box :businessintelligence %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
