--- a/app/views/careers/show.haml
+++ b/app/views/careers/show.haml
@@ -22,7 +22,7 @@
           %tr
             %td.job-title= job.title
             %td.job-detail= job.location
-            %td.job-detail= raw job.description
+            %td.job-detail{style: "width: 35%;"}= raw job.description
             %td.job-link
               = link_to job_path(job) do
                 Position Details
