--- a/app/views/practiceareas/show.haml
+++ b/app/views/practiceareas/show.haml
@@ -12,13 +12,13 @@
   .row
     .small-12.medium-9.columns
       %h6.target-jump.d-inline-block.p-left-5.m-bottom-0.lh-btn-m{"data-target" => "pm"}
-        %a Project Management
+        %a= @practicearea.pa1_title
       %h6.d-inline-block.p-left-5.c-lght-gray.lh-btn-m.m-bottom-0 &#124;
       %h6.target-jump.d-inline-block.p-left-5.m-bottom-0.lh-btn-m{"data-target" => "mc"}
-        %a Management Consulting
+        %a= @practicearea.pa2_title
       %h6.d-inline-block.p-left-5.c-lght-gray.lh-btn-m.m-bottom-0 &#124;
       %h6.target-jump.d-inline-block.p-left-5.m-bottom-0.lh-btn-m{"data-target" => "bi"}
-        %a Business Intelligence
+        %a= @practicearea.pa3_title
     .small-12.medium-3.columns
       = link_to contact_path, class: "btn btn-empty btn-m btn-block" do
         %span.btn-text Contact Us
