--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -2,15 +2,15 @@
 
 <ul>
 	<li><%= link_to 'Manage Users', admin_users_path %></li>
-	<li><%= link_to 'Manage HomePage', admin_mains_path %></li>
+	<li><%= link_to 'Manage HomePage', edit_admin_main_path(1) %></li>
 <!-- 	<li><%= link_to 'Manage Posts', admin_posts_path %></li>
  -->	
- 	<li><%= link_to 'Manage Practice Areas Page', admin_practiceareas_path %></li>
- 	<li><%= link_to 'Manage Careers Page', admin_careers_path %></li>
+ 	<li><%= link_to 'Manage Practice Areas Page', edit_admin_practicearea_path(1) %></li>
+ 	<li><%= link_to 'Manage Careers Page', edit_admin_career_path(1) %></li>
 	<li><%= link_to 'Manage Jobs', admin_jobs_url %></li>
-	<li><%= link_to 'Manage Team Page', admin_teams_path %></li>
+	<li><%= link_to 'Manage Team Page', edit_admin_team_path(1) %></li>
 	<li><%= link_to 'Manage Employees', admin_employees_path %></li>
-	<li><%= link_to 'Manage About Us', admin_abouts_path %></li>
-	<li><%= link_to 'Manage Contact Us', admin_contacts_path %></li>
+	<li><%= link_to 'Manage About Us', edit_admin_about_path(1) %></li>
+	<li><%= link_to 'Manage Contact Us', edit_admin_contact_path(1) %></li>
 	<li><%= link_to 'Manage Insights', admin_insights_path %></li>
 </ul>
