updated ordering for employees

--- a/app/views/admin/employees/index.html.erb
+++ b/app/views/admin/employees/index.html.erb
@@ -1,9 +1,8 @@
 <h1>Listing employees</h1>
 
-<table>
+<table class="sortable_table">
   <thead>
     <tr>
-      <th>Picture</th>
       <th>Name</th>
       <th>Title</th>
       <th>Linkedin</th>
@@ -14,17 +13,16 @@
     </tr>
   </thead>
 
-  <tbody>
+  <tbody id="employees">
     <% @employees.each do |employee| %>
-      <tr>
-        <td><%= image_tag employee.employee_image.to_s %></td>
+      <%= content_tag_for :tr, employee do %>
         <td><%= employee.name %></td>
         <td><%= employee.title %></td>
         <td><%= employee.linkedin %></td>
         <td><%= employee.twitter %></td>
         <td><%= link_to 'Edit', edit_admin_employee_path(employee) %></td>
         <td><%= link_to 'Delete', admin_employee_path(employee), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
