--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -13,4 +13,5 @@
 	<li><%= link_to 'Manage About Us', edit_admin_about_path(1) %></li>
 	<li><%= link_to 'Manage Contact Us', edit_admin_contact_path(1) %></li>
 	<li><%= link_to 'Manage Insights', admin_insights_path %></li>
+	<li><%= link_to 'Manage Quotes', admin_quotes_path %></li>
 </ul>
