JJ: trying to fix ie z-index bug

--- a/app/views/practiceareas/show.haml
+++ b/app/views/practiceareas/show.haml
@@ -8,21 +8,22 @@
           = @practicearea.hero_title
         %p.p-top-15.c-white.p-bottom-80
           = @practicearea.hero_copy
-.strata-small.bgc-lghter-gray.b-bottom-light-gray.w-100.p-relative{"data-magellan-expedition" => "fixed"}
-  .row
-    .small-12.medium-9.columns
-      %h6.target-jump.d-inline-block.p-left-5.m-bottom-0.lh-btn-m{"data-target" => "pm"}
-        %a= @practicearea.pa1_title
-      %h6.d-inline-block.p-left-5.c-lght-gray.lh-btn-m.m-bottom-0 &#124;
-      %h6.target-jump.d-inline-block.p-left-5.m-bottom-0.lh-btn-m{"data-target" => "mc"}
-        %a= @practicearea.pa2_title
-      %h6.d-inline-block.p-left-5.c-lght-gray.lh-btn-m.m-bottom-0 &#124;
-      %h6.target-jump.d-inline-block.p-left-5.m-bottom-0.lh-btn-m{"data-target" => "bi"}
-        %a= @practicearea.pa3_title
-    .small-12.medium-3.columns
-      = link_to contact_path, class: "btn btn-empty btn-m btn-block" do
-        %span.btn-text Contact Us
-        %span.btn-text.f-right{"data-icon" => "c"}
+%div{style: "z-index: 1000;"}
+  .strata-small.bgc-lghter-gray.b-bottom-light-gray.w-100.p-relative{"data-magellan-expedition" => "fixed"}
+    .row
+      .small-12.medium-9.columns
+        %h6.target-jump.d-inline-block.p-left-5.m-bottom-0.lh-btn-m{"data-target" => "pm"}
+          %a= @practicearea.pa1_title
+        %h6.d-inline-block.p-left-5.c-lght-gray.lh-btn-m.m-bottom-0 &#124;
+        %h6.target-jump.d-inline-block.p-left-5.m-bottom-0.lh-btn-m{"data-target" => "mc"}
+          %a= @practicearea.pa2_title
+        %h6.d-inline-block.p-left-5.c-lght-gray.lh-btn-m.m-bottom-0 &#124;
+        %h6.target-jump.d-inline-block.p-left-5.m-bottom-0.lh-btn-m{"data-target" => "bi"}
+          %a= @practicearea.pa3_title
+      .small-12.medium-3.columns
+        = link_to contact_path, class: "btn btn-empty btn-m btn-block" do
+          %span.btn-text Contact Us
+          %span.btn-text.f-right{"data-icon" => "c"}
 .strata#pm
   .row
     .small-12.medium-5.columns
