--- a/app/views/practiceareas/show.haml
+++ b/app/views/practiceareas/show.haml
@@ -29,18 +29,18 @@
     .small-12.medium-5.columns
       %h3.c-drk-gray= @practicearea.pa1_title
     .small-12.medium-7.columns
-      %p= raw @practicearea.pa1_copy
+      = raw @practicearea.pa1_copy
 %hr
 .strata#mc
   .row
     .small-12.medium-5.columns
       %h3.c-drk-gray= @practicearea.pa2_title
     .small-12.medium-7.columns
-      %p= raw @practicearea.pa2_copy
+      = raw @practicearea.pa2_copy
 %hr
 .strata#bi
   .row
     .small-12.medium-5.columns
       %h3.c-drk-gray= @practicearea.pa3_title
     .small-12.medium-7.columns
-      %p= raw @practicearea.pa3_copy
+      = raw @practicearea.pa3_copy
