--- a/app/views/careers/show.haml
+++ b/app/views/careers/show.haml
@@ -34,10 +34,10 @@
       .small-12.medium-3.columns
         -mains.each do |main|
         %div.ta-center
-          = image_tag main.stratum_1_image_url(:thumb).to_s, class: "circle-thumb b-huskies"
+          = image_tag main.stratum_1_image_url(:thumb).to_s, class: "circle-thumb"
       .small-12.medium-9.columns
-        %h4.c-huskies= main.stratum_1_title
-        %p.c-huskies.p-top-10= main.stratum_1_copy
+        %h4.c-drk-gray= main.stratum_1_title
+        %p.c-drk-gray.p-top-10= main.stratum_1_copy
         %h5
           = link_to main.stratum_1_link do
             = main.stratum_1_cta
