updated show for PA to include insights

--- a/app/views/practiceareas/show.haml
+++ b/app/views/practiceareas/show.haml
@@ -29,6 +29,11 @@
       %h3.c-drk-gray= @practicearea.pa1_title
     .small-12.medium-7.columns
       %p= raw @practicearea.pa1_copy
+      %p= @practicearea.pa1_title
+      - insights = Insight.all
+        - insights.each do |insight|
+          - if insight.businessconsulting?
+          %p= link_to insight.title, insight.article.url
 %hr{style: "z-index: 800;"}
 .strata#mc{style: "z-index: 800;"}
   .row
@@ -36,6 +41,11 @@
       %h3.c-drk-gray= @practicearea.pa2_title
     .small-12.medium-7.columns
       %p= raw @practicearea.pa2_copy
+      %p= @practicearea.pa2_title
+      - insights = Insight.all
+        - insights.each do |insight|
+          - if insight.projectmanagement?
+          %p= link_to insight.title, insight.article.url
 %hr{style: "z-index: 800;"}
 .strata#bi{style: "z-index: 800;"}
   .row
@@ -43,3 +53,8 @@
       %h3.c-drk-gray= @practicearea.pa3_title
     .small-12.medium-7.columns
       = raw @practicearea.pa3_copy
+      %p= @practicearea.pa3_title
+      - insights = Insight.all
+        - insights.each do |insight|
+          - if insight.businessintelligence?
+          %p= link_to insight.title, insight.article.url
