JJ: add no-style class for nav lists

--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -1,7 +1,7 @@
 %footer.footer
 	.row
 		.small-12.medium-8.columns
-			%ul
+			%ul.l-no-style
 				%li.footer-item
 					= active_link_to "Meet the Team", team_path, class: "footer-link main-footer", :class_active => "current"
 				%li.footer-item
@@ -9,7 +9,7 @@
 				%li.footer-item
 					= active_link_to "Contact", contact_path, class: "footer-link main-footer", :class_active => "current"
 		.small-12.medium-4.columns
-			%ul.f-right
+			%ul.f-right.l-no-style
 				%li.footer-item
 					%h4
 						%a.footer-link{"data-icon" => "i", href: "#", target: "_blank"}
