--- a/app/views/mains/_top_announcement.haml
+++ b/app/views/mains/_top_announcement.haml
@@ -2,7 +2,7 @@
   .row
     .small-12.medium-3.columns
       %div.ta-center
-        = image_tag @main.stratum_1_image_url(:thumb).to_s, class: "circle-thumb"
+        = image_tag @main.stratum_1_image_url(:thumb).to_s, class: "circle-thumb b-gray"
     .small-12.medium-9.columns
       %h4.c-drk-gray= @main.stratum_1_title
       %p.c-drk-gray.p-top-10= @main.stratum_1_copy
