--- a/app/views/admin/employees/_form.html.erb
+++ b/app/views/admin/employees/_form.html.erb
@@ -39,6 +39,10 @@
     <%= f.label :twitter %><br>
     <%= f.text_area :twitter %>
   </div>
+  <div>
+    <%= f.label :sort %><br>
+    <%= f.text_field :sort %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
