--- a/app/assets/stylesheets/modules/_hero.scss
+++ b/app/assets/stylesheets/modules/_hero.scss
@@ -1,5 +1,10 @@
 .large-hero {
+	width: 100%;
+	position: relative;
 	background-size: 100%;
+  background-size: cover;
+	background-position: 50% 50%;
+  background-repeat: no-repeat no-repeat;
 }
 
 .fixed-image {
