JJ: making hiring silhouette a circle

--- a/app/views/mains/_hiring_announcement.haml
+++ b/app/views/mains/_hiring_announcement.haml
@@ -2,7 +2,7 @@
   .row
     .small-12.medium-3.columns
       %div.ta-center
-        = image_tag @main.stratum_2_image_url(:thumb).to_s, class: "b-bloom-gray"
+        = image_tag @main.stratum_2_image_url(:thumb).to_s, class: "circle-thumb b-gray"
     .small-12.medium-9.columns
       %h4.c-white= @main.stratum_2_title
       %p.c-white.p-top-10= @main.stratum_2_copy
