--- a/app/views/practiceareas/show.haml
+++ b/app/views/practiceareas/show.haml
@@ -23,7 +23,8 @@
       = link_to contact_path, class: "btn btn-empty btn-m btn-block" do
         %span.btn-text Contact Us
         %span.btn-text.f-right{"data-icon" => "c"}
-.strata#pm{style: "z-index: 800;"}
+#pm.clear-nav-anchor    
+.strata{style: "z-index: 800;"}
   .row
     .small-12.medium-5.columns
       %h3.c-drk-gray= @practicearea.pa1_title
@@ -41,7 +42,8 @@
               %span.m-right-5.p-icon{"data-icon" => "a"}
               = insight.title
 %hr{style: "z-index: 800;"}
-.strata#mc{style: "z-index: 800;"}
+#mc.clear-nav-anchor
+.strata{style: "z-index: 800;"}
   .row
     .small-12.medium-5.columns
       %h3.c-drk-gray= @practicearea.pa2_title
@@ -59,7 +61,8 @@
               %span.m-right-5.p-icon{"data-icon" => "a"}
               = insight.title
 %hr{style: "z-index: 800;"}
-.strata#bi{style: "z-index: 800;"}
+#bi.clear-nav-anchor
+.strata{style: "z-index: 800;"}
   .row
     .small-12.medium-5.columns
       %h3.c-drk-gray= @practicearea.pa3_title
