JJ: add background image for nav on tertiary pages

--- a/app/views/teams/show.haml
+++ b/app/views/teams/show.haml
@@ -1,5 +1,7 @@
-= render "layouts/header"
-
+- image = @main.hero_image_url
+.strata-mini.fixed-image{style: "background-image: url(#{image});"}
+  = render 'layouts/header'
+  
 .strata-small
   .row.p-top-30
     .small-12.columns
