--- a/app/views/contacts/show.haml
+++ b/app/views/contacts/show.haml
@@ -1,4 +1,6 @@
-= render 'layouts/header'
+- image = @main.hero_image_url
+.strata-mini.fixed-image{style: "background-image: url(#{image});"}
+  = render 'layouts/header'
 
 .strata-small
   .row.p-top-30
