JJ: apply large hero class to nav background strata

--- a/app/views/teams/show.haml
+++ b/app/views/teams/show.haml
@@ -1,5 +1,5 @@
 - image = @main.hero_image_url
-.strata-mini.fixed-image{style: "background-image: url(#{image});"}
+.strata-mini.large-hero.fixed-image{style: "background-image: url(#{image});"}
   = render 'layouts/header'
   
 .strata-small
