JJ: quotes carousel

--- a/app/assets/stylesheets/components/_typography.scss
+++ b/app/assets/stylesheets/components/_typography.scss
@@ -1,5 +1,9 @@
 .ta-center { text-align: center; }
 
+.f-italics {
+  font-family: 'MuseoSans-500Italic', Arial, sans-serif;
+}
+
 .h5-icon { 
 	position: relative;
 	top: 4px;
