added success stories, removed references to insights

--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -5,7 +5,7 @@
 				%li.footer-item
 					= active_link_to "Meet the Team", team_path, class: "footer-link main-footer", :class_active => "current"
 				%li.footer-item
-					= active_link_to "Insights", insights_path, class: "footer-link main-footer", :class_active => "current"
+					= active_link_to "Success Stories", successes_path, class: "footer-link main-footer", :class_active => "current"
 				%li.footer-item
 					= active_link_to "Contact", contact_path, class: "footer-link main-footer", :class_active => "current"
 		.small-12.medium-4.columns
