--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -12,6 +12,6 @@
 	<li><%= link_to 'Manage Employees', admin_employees_path %></li>
 	<li><%= link_to 'Manage About Us', edit_admin_about_path(1) %></li>
 	<li><%= link_to 'Manage Contact Us', edit_admin_contact_path(1) %></li>
-	<li><%= link_to 'Manage Insights', admin_insights_path %></li>
+	<li><%= link_to 'Manage Success Stories', admin_successes_path %></li>
 	<li><%= link_to 'Manage Quotes', admin_quotes_path %></li>
 </ul>
