added download for brochure on contact

--- a/app/views/contacts/show.haml
+++ b/app/views/contacts/show.haml
@@ -26,4 +26,9 @@
           %p.c-drk-gray.ta-center{"data-icon" => "f"}
         .small-11.columns
           %a{href: "mailto:" + @contact.email}= @contact.email
-
+      .row.p-20
+        .small-1.columns
+          %p.c-drk-gray.ta-center{"data-icon" => "a"}
+        .small-11.columns
+          %a{ :href => "https://s3-us-west-2.amazonaws.com/bloom-site-images/Bloom_E_Brochure.pdf", :target => "_blank" }
+            Download a Bloom Consulting Group Brochure
