JJ: make titles blue

--- a/app/views/careers/show.haml
+++ b/app/views/careers/show.haml
@@ -4,14 +4,14 @@
   .hero
     .row
       .small-12.medium-10.medium-offset-1.columns
-        %h1.ta-center.c-white.hero-font
+        %h1.ta-center.hero-font
           = @career.hero_title
         %p.ta-center.p-top-15.c-white.p-bottom-80
           = @career.hero_copy
 .strata
   .row
     .small-12.columns
-      %h3.c-drk-gray= @career.intro_title
+      %h3.c-blue= @career.intro_title
       %p.p-top-10
         = @career.intro_copy
   .row
