--- a/app/views/insights/index.haml
+++ b/app/views/insights/index.haml
@@ -5,7 +5,7 @@
 .strata-small
   .row.p-top-30
     .small-12.columns
-      %h1.c-drk-gray Insights
+      %h1.c-blue Insights
 - insights = Insight.all
 - insights.each do |insight|
   .strata.strata-striped
