--- a/app/views/jobs/show.haml
+++ b/app/views/jobs/show.haml
@@ -7,7 +7,7 @@
         %span.m-right-5{"data-icon" => "d"}
         Return to Open Positions
     .small-12.medium-9.columns
-      %h1.c-drk-gray= @job.title
+      %h1.c-blue= @job.title
   .row.p-x-10
     .small-12.medium-3.columns
       %h6.c-drk-gray{style: "text-transform: uppercase; text-align: right;"} location:
