--- a/app/views/mains/_practice_areas.haml
+++ b/app/views/mains/_practice_areas.haml
@@ -1,7 +1,7 @@
 .strata
   .row
     .small-12.columns
-      %h2.c-drk-gray.ta-center Practice Areas
+      %h2.c-blue.ta-center Practice Areas
   .row.m-top-20{"data-equalizer" => "true"}
     .small-12.medium-4.columns
       = link_to practiceareas_path(anchor: "pm"), class: "anchor-link" do
