--- a/app/views/teams/show.haml
+++ b/app/views/teams/show.haml
@@ -5,7 +5,7 @@
 .strata-small
   .row.p-top-30
     .small-12.columns
-      %h3.c-drk-gray= @team.intro_title
+      %h3.c-blue= @team.intro_title
   .row
     .small-12.large-9.columns
       %p.p-top-5= @team.intro_copy
