--- a/app/views/abouts/show.haml
+++ b/app/views/abouts/show.haml
@@ -4,7 +4,7 @@
   .hero
     .row
       .small-12.medium-10.medium-offset-1.columns
-        %h1.ta-center.c-white.hero-font
+        %h1.ta-center.hero-font
           = @about.hero_title
         %p.ta-center.p-top-15.c-white.p-bottom-80
           = @about.hero_copy
