--- a/app/views/contacts/show.haml
+++ b/app/views/contacts/show.haml
@@ -5,7 +5,7 @@
 .strata-small
   .row.p-top-30
     .small-12.columns
-      %h1.c-drk-gray Contact Us
+      %h1.c-blue Contact Us
   .row.p-top-20
     .small-12.medium-6.columns
       %iframe.b-gray{src: "http://www.bing.com/maps/embed/viewer.aspx?v=3&cp=47.672935~-122.123372&lvl=16&w=500&h=400&sty=r&typ=d&pp=~~47.672285~-122.123587&ps=&dir=0&mkt=en-us&src=SHELL&form=BMEMJS", width: "100%", height: "300", frameborder: "0"}
