--- a/app/views/mains/_meet_the_team.haml
+++ b/app/views/mains/_meet_the_team.haml
@@ -1,7 +1,7 @@
 .strata.bgc-lghter-gray
   .row
     .small-12.columns
-      %h2.c-drk-gray.ta-center Meet the Team
+      %h2.c-blue.ta-center Meet the Team
   .row.m-top-20
     .small-12.columns
       %div.bgc-white.b-light-gray.p-x-40.p-y-80
