--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -9,13 +9,20 @@
 				%li.footer-item
 					= active_link_to "Contact", contact_path, class: "footer-link main-footer", :class_active => "current"
 		.small-12.medium-4.columns
+			- contact = Contact.all
 			%ul.f-right.l-no-style
-				%li.footer-item
-					%h4
-						%a.footer-link{"data-icon" => "i", href: "#", target: "_blank"}
-				%li.footer-item
-					%h4
-						%a.footer-link{"data-icon" => "h", href: "#", target: "_blank"}
-				%li.footer-item
-					%h4
-						%a.footer-link{"data-icon" => "j", href: "#", target: "_blank"}
+				- if contact.last.linkedin.present?
+					%li.footer-item
+						%h4
+							= link_to contact.last.linkedin, class: "footer-link", :target => "_blank" do
+								%span{"data-icon" => "i"}
+				- if contact.last.twitter.present?
+					%li.footer-item
+						%h4
+							= link_to contact.last.twitter, class: "footer-link", :target => "_blank" do
+								%span{"data-icon" => "h"}
+				- if contact.last.facebook.present?
+					%li.footer-item
+						%h4
+							= link_to contact.last.facebook, class: "footer-link", :target => "_blank" do
+								%span{"data-icon" => "j"}
